--- a/circle.yml
+++ b/circle.yml
@@ -25,7 +25,7 @@ machine:
     PR_ENV: ${BRANCH:+pr-$BRANCH}
     CIRCLE_ENV: ci-$CIRCLE_BUILD_NUM
     DEFAULT_ENV: $(echo ${PR_ENV:-$CIRCLE_ENV} | tr '[:upper:]' '[:lower:]' | sed 's/[^0-9a-z-]//g' | cut -c -11 | sed 's/-$//')
-    TERMINUS_ENV: ${TERMINUS_ENV:-$DEFAULT_ENV}
+    TERMINUS_ENV: 'dev'
     NOTIFY: 'scripts/github/add-commit-comment {project} {sha} "Created multidev environment [{site}#{env}]({dashboard-url})." {site-url}'
     PATH: $PATH:~/bin:tests/scripts
     BUILD_TOOLS_VERSION: '^1'
